# kanban-orchestrator

./: .gitignore  .mcp.json.example  ARCHITECTURE.md  CLAUDE.md  HANDOVER.md  Makefile  README.md  start.sh
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/.kanban/: mcps.yaml  mcps.yaml.example  settings.json  settings.json.example
backend/output/18f92cc7-714f-4f7b-af50-eccab4eb92ab/: test-result.txt
backend/src/: __init__.py  database.py
backend/src/agents/: README.md  __init__.py  executor.py  orchestrator.py  planner.py  subtask_executor.py  types.py
backend/src/api/: README.md  events.py  project_service.py  schemas.py  task_service.py
backend/src/api/routes/: README.md  agent.py  events.py  projects.py  schema.py  settings.py  tasks.py
backend/src/mcp/: __init__.py  registry.py
backend/src/mcp_client/: README.md  __init__.py  registry.py
backend/src/mcp_servers/: README.md  __init__.py  kanban_server.py  registry.py
backend/src/mcp_servers/filesystem/: README.md  server.py
backend/src/models/: README.md  __init__.py  agent_run.py  project.py  task.py
backend/src/services/: README.md  git.py
backend/tests/: README.md  conftest.py  test_agent.py  test_events.py  test_git.py  test_mcp_server.py  test_projects.py  test_schema.py  test_settings.py  test_tasks.py
dev/: ARCHITECTURE.md  DEBUG-REPORT.md  DESIGN-MCP-WORKFLOWS.md  DESIGN-TASK-DELEGATION.md  FRONTEND-PLAN.md  HANDOVER.md  ISSUE_TRACKER.md  MCP-ARCHITECTURE.md  PLAN.md  TROUBLESHOOTING.md  WORKFLOW.md  git-workflow.md
frontend/: README.md  biome.json  package.json  (+1 more)
(+53 files in other folders)
