[project]
name = "kanban-orchestrator-backend"
version = "0.1.0"
description = "AI-powered workflow orchestrator backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "claude-agent-sdk>=0.1.19",
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.45",
]
