[project]
name = "kanban-orchestrator-backend"
version = "0.1.0"
description = "AI-powered workflow orchestrator backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "claude-agent-sdk>=0.1.19",
    "fastapi[standard]>=0.115.0",
    "fastmcp>=2.14.3",
    "mcp>=1.25.0",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
